feat: add redis client helper

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT=3001
+# Set either REDIS_URL or REDIS_HOST/REDIS_PORT
 REDIS_URL=redis://127.0.0.1:6379
+# REDIS_HOST=127.0.0.1
+# REDIS_PORT=6379
 API_KEY=changeme
 NODE_ENV=development
 COQUI_PY=/abs/path/to/venv/bin/python
