--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node -e \"console.log('No tests specified')\"",
+    "test": "node --test && npx playwright test",
     "dev": "nodemon server.js",
     "prep": "node scripts/run-prep.js",
     "start-train": "node scripts/run-train.js"
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.3",
+    "@playwright/test": "^1.45.3"
   }
 }
